error/example/js/async-error.js
// 异步错误

// promise 错误
new Promise((resolve, reject)=>{
  throw new Error('Promise');
})
